[package]
name = "blockchat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[dependencies]
base64 = "0.21"
clap = { version = "4.4.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.5"

[profile.dev.package.num-bigint-dig]
opt-level = 3
