[package]
name = "blockchat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[dependencies]
axum = "0.7"
base-62 = "0.1"
clap = { version = "4.4.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
log = "0.4"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version= "3", features = ["macros"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"
rustyline = "13.0.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.dev.package.num-bigint-dig]
opt-level = 3
